--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hello-pangea/dnd": "^16.6.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -37,7 +37,6 @@
     "@eslint/js": "^9.9.0",
     "@types/axios": "^0.14.0",
     "@types/react": "^18.3.3",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "@types/react-image-gallery": "^1.2.4",
     "@vitejs/plugin-react": "^4.3.1",
