--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hello-pangea/dnd": "^16.6.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -31,11 +32,13 @@
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
-    "simplebar-react": "^3.2.6"
+    "simplebar-react": "^3.2.6",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/axios": "^0.14.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-image-gallery": "^1.2.4",
