--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "canvas-confetti": "^1.9.3",
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -30,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
@@ -39,6 +41,7 @@
     "@eslint/js": "^9.9.0",
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^5.2.10",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-image-gallery": "^1.2.4",
