--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-image-gallery": "^1.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
