--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^7.5.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
@@ -32,6 +34,7 @@
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
