--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.11.10",
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
+    "react-spring": "^9.7.4",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
