--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.4.6",
     "framer-motion": "^11.11.10",
     "lightgallery": "^2.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-countdown": "^2.3.6",
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
@@ -38,6 +41,8 @@
     "react-spring": "^9.7.4",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
@@ -51,6 +56,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
