--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -51,6 +53,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
