--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.1",
@@ -41,11 +42,11 @@
     "react-spring": "^9.7.4",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
-    "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
     "sass": "^1.77.8",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
