--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "bootstrap-icons": "^1.11.3",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "framer-motion": "^11.11.10",
     "lightgallery": "^2.7.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
+    "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.6",
     "react-datepicker": "^7.5.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
     "react-icons": "^5.3.0",
     "react-image-gallery": "^1.3.0",
     "react-loading-skeleton": "^3.5.0",
@@ -57,6 +60,7 @@
     "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-flatpickr": "^3.8.11",
     "@types/react-image-gallery": "^1.2.4",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
