--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
+    "react-bootstrap-icons": "^1.11.5",
     "react-chartjs-2": "^5.2.0",
     "react-countdown": "^2.3.6",
     "react-datepicker": "^7.5.0",
